--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,13 @@
         "doctrine/common": "^2.8",
         "kcs/metadata": "^2.0",
         "ocramius/proxy-manager": "^2.0",
+        "psr/cache-implementation": "^1.0",
         "psr/log": "^1.0",
-        "ruflin/elastica": "^5.0",
-        "symfony/cache": "^3.1|^4.0"
+        "ruflin/elastica": "^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "symfony/cache": "^3.1|^4.0"
     },
     "autoload": {
         "psr-4": {
