add document persister, original document data map, document states, on clear event

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "fazland/elastica-odm",
     "minimum-stability": "stable",
+    "description": "",
     "type": "library",
     "license": "MIT",
     "authors": [
