--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,10 @@
         }
     ],
     "require": {
+        "php": "^7.1",
         "doctrine/annotations": "^1.6",
         "doctrine/common": "^2.8",
-        "kcs/metadata": "^2.0",
+        "kcs/metadata": "^2.1",
         "ocramius/proxy-manager": "^2.0",
         "psr/cache-implementation": "^1.0",
         "psr/log": "^1.0",
