--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "ocramius/proxy-manager": "^2.0",
         "psr/cache-implementation": "^1.0",
         "psr/log": "^1.0",
-        "ruflin/elastica": "^5.0"
+        "ruflin/elastica": "^5.0",
+        "symfony/console": "^2.8|^3.0|^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
