--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "doctrine/annotations": "^1.6",
         "doctrine/common": "^2.8",
         "kcs/class-finder": "^0.1",
-        "kcs/metadata": "^2.1",
+        "kcs/metadata": "^2.1|^3.0",
         "ocramius/proxy-manager": "^2.0",
         "psr/cache-implementation": "^1.0",
         "psr/log": "^1.0",
