--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,11 @@ matrix:
         - ES_VERSION=6.3.0
         - ES_DOWNLOAD_URL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz
         - ELASTICA_VERSION=^6.0
+    - php: 7.3
+      env:
+        - ES_VERSION=6.3.0
+        - ES_DOWNLOAD_URL=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${ES_VERSION}.tar.gz
+        - ELASTICA_VERSION=^6.0
 
 install:
   - wget ${ES_DOWNLOAD_URL}
