--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
-        "symfony/cache": "^3.1|^4.0"
+        "symfony/cache": "^3.1|^4.0",
+        "symfony/var-dumper": "^3.1|^4.0"
     },
     "autoload": {
         "psr-4": {
