--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -2,7 +2,8 @@
 
 $finder = PhpCsFixer\Finder::create()
     ->in([__DIR__])
-    ->exclude(['vendor'])
+    ->exclude(['data', 'docker', 'infrastructure', 'vendor', 'var'])
+    ->notPath('/cache/')
 ;
 
 return PhpCsFixer\Config::create()
@@ -24,6 +25,5 @@ return PhpCsFixer\Config::create()
         'declare_strict_types' => true,
         'native_function_invocation' => true,
         'php_unit_test_case_static_method_calls' => ['call_type' => 'self'],
-        'multiline_whitespace_before_semicolons' => ['strategy' => 'new_line_for_chained_calls'],
     ])
 ;
