--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/console": "^2.8|^3.0|^4.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.15",
         "phpunit/phpunit": "^7.0",
         "symfony/cache": "^3.1|^4.0",
         "symfony/var-dumper": "^3.1|^4.0"
