--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /vendor/
 composer.lock
-phpunit.xml
-.php_cs.cache
+/.php_cs.cache
 
 ###> phpunit/phpunit ###
 /phpunit.xml
+/.phpunit.result.cache
 ###< phpunit/phpunit ###
