--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
         "ocramius/proxy-manager": "^2.0",
         "psr/cache-implementation": "^1.0",
         "psr/log": "^1.0",
-        "ruflin/elastica": "^5.0|^6.0",
-        "symfony/console": "^2.8|^3.0|^4.0"
+        "ruflin/elastica": "^5.0|^6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
         "phpunit/phpunit": "^8.0",
         "symfony/cache": "^3.1|^4.0",
+        "symfony/console": "^3.4|^4.0",
         "symfony/var-dumper": "^3.1|^4.0"
     },
     "autoload": {
