--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_script:
 
 script:
     - wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
-    - if [[ "$TRAVIS_PHP_VERSION" == "7.3" ]]; then vendor/bin/phpunit --coverage-clover=coverage.clover; else vendor/bin/phpunit; fi
+    - if [[ "$TRAVIS_PHP_VERSION" == "7.3" && "$ES_VERSION" == "6.3.0" ]]; then vendor/bin/phpunit --coverage-clover=coverage.clover; else vendor/bin/phpunit; fi
 
 after_success:
     - if [ -f coverage.clover ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
