--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "fazland/elastica-odm",
     "minimum-stability": "stable",
-    "description": "",
+    "description": "Doctrine like document manager for ElasticSearch, based on Elastica",
     "type": "library",
     "license": "MIT",
     "authors": [
