--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
         "phpunit/phpunit": "^8.0",
-        "symfony/cache": "^3.1|^4.0",
-        "symfony/console": "^3.4|^4.0",
-        "symfony/var-dumper": "^3.1|^4.0"
+        "symfony/cache": "^3.1|^4.0|^5.0",
+        "symfony/console": "^3.4|^4.0|^5.0",
+        "symfony/var-dumper": "^3.1|^4.0|^5.0"
     },
     "autoload": {
         "psr-4": {
